plugins/screenshot: re-render the screen instead of just blitting

This allows us to skip intermediary colorspace transformations, which avoids
information loss with night light, and allows for tone mapping of HDR content
to be applied for each window as needed.

BUG: 498881